# TestTaskCADEX

./: CMakeLists.txt  README.MD  main.cpp
lib/: CMakeLists.txt  Curves.cpp  Curves.h
